--- a/PhenoPad/PageOverview.xaml
+++ b/PhenoPad/PageOverview.xaml
@@ -35,21 +35,35 @@
        
         <Grid>
             <Grid.RowDefinitions>
-
                 <RowDefinition Height="100"></RowDefinition>
                 <RowDefinition Height="100"></RowDefinition>
-                
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
-            <Border Grid.Row="0" Padding="5">
-                <Button Background="Transparent" Style="{StaticResource MyButtonStyle}" Click="CreateButton_Click" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch">
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <Border Grid.Row="0" Grid.Column="0" >
+                <Button Background="Transparent" Style="{StaticResource MyButtonStyle}" Click="CreateButton_Click" 
+                        HorizontalAlignment="Stretch"  VerticalAlignment="Stretch">
                     <StackPanel Orientation="Horizontal" >
-                        <FontIcon FontSize="27" FontWeight="ExtraBold" FontFamily="Segoe MDL2 Assets" Glyph="&#xE710;"/>
-                        <TextBlock Margin="15 0 0 0" FontSize="27" >Create new note</TextBlock>
+                        <FontIcon FontSize="25" FontFamily="Segoe MDL2 Assets" Glyph="&#xE7C3;"/>
+                        <TextBlock Margin="10 0 0 0" FontSize="25" TextWrapping="WrapWholeWords" >New Note</TextBlock>
                     </StackPanel>
                 </Button>
             </Border>
-            <StackPanel Grid.Row="1" Margin="5" >
+            <Border Grid.Row="0" Grid.Column="1" >
+                <Button Background="Transparent" Style="{StaticResource MyButtonStyle}" Click="ImportEHR_Click" 
+                        HorizontalAlignment="Stretch"  VerticalAlignment="Stretch">
+                    <StackPanel Orientation="Horizontal" >
+                        <FontIcon FontSize="25" FontFamily="Segoe MDL2 Assets" Glyph="&#xE896;"/>
+                        <TextBlock Margin="10 0 0 0" FontSize="25" >Import EHR</TextBlock>
+                    </StackPanel>
+                </Button>
+            </Border>
+            <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Margin="5" >
                 <Grid >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*"/>
@@ -68,7 +82,12 @@
                 </Grid>
                 <AutoSuggestBox QueryIcon="Find" HorizontalAlignment="Stretch" Margin="5 0 5 0" RelativePanel.AlignVerticalCenterWithPanel="True" Name="autoSuggestBox" PlaceholderText="Search" TextChanged="autosuggesttextchanged" QuerySubmitted="autosuggestquerysubmitted" ></AutoSuggestBox>
             </StackPanel>
-            <ListView  Margin="5"  x:Name="notebookList" ItemClick="notebookList_ItemClick" IsItemClickEnabled="True" Grid.Row="2">
+            
+            <ListView  Margin="5"  x:Name="notebookList" ItemClick="notebookList_ItemClick" 
+                       IsItemClickEnabled="True" Grid.ColumnSpan="2" Grid.Row="2"
+                       ScrollViewer.HorizontalScrollMode="Disabled"
+                       ScrollViewer.VerticalScrollBarVisibility="Hidden"
+                       ScrollViewer.IsVerticalScrollChainingEnabled="False">
                 <ListView.Resources>
                     <SwipeItems x:Key="left" Mode="Reveal">
                         <SwipeItem Text="Delete" Background="PaleVioletRed" Invoked="Delete_ItemInvoked">
@@ -88,8 +107,9 @@
                                 <ColumnDefinition Width="60"/>
                             </Grid.ColumnDefinitions>
                             <Border Width="80" Height="80" Padding="5" >
-                                <BitmapIcon UriSource="{x:Bind firstPageUri}"/>
-                            </Border>
+                                <!--<BitmapIcon UriSource="{x:Bind firstPageUri}"/>-->
+                                    <FontIcon FontSize="25" FontWeight="ExtraBold" FontFamily="Segoe MDL2 Assets" Glyph="&#xE8A5;" />
+                                </Border>
                             <RelativePanel  Grid.Column="1" Padding="0 10 0 10">
                                 <TextBlock Padding="10" Text="{x:Bind name}" Foreground="Black" 
                            FontSize="20" RelativePanel.AlignTopWithPanel="True"/>
