--- a/PhenoPad/CustomControl/EHRPageControl.xaml
+++ b/PhenoPad/CustomControl/EHRPageControl.xaml
@@ -36,7 +36,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1500" />
+            <ColumnDefinition Width="1200" />
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
@@ -54,6 +54,7 @@
         
             <RichEditBox Style="{StaticResource MyRichEditBoxStyle}"                         
                          Background="Transparent" x:Name="EHRTextBox" 
+                         Opacity="0.9"
                          IsSpellCheckEnabled="False"
                          Padding="10 50 10 0"
                          IsEnabled="False"
@@ -169,7 +170,7 @@
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="30"/>
+                    <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
@@ -181,6 +182,15 @@
                     <TextBlock Text="Copy" FontWeight="Bold" FontSize="30" />
 
                 </Button>
+                </Grid>
+                <Grid CornerRadius="10" Grid.Column="0" Background="White">
+
+                    <Button Style="{StaticResource ButtonStyle1}"  Width="300" Height="200"  
+                            Click="RedoOperation"
+                            HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+                        <TextBlock Text="Redo" FontWeight="Bold" FontSize="30" />
+
+                    </Button>
                 </Grid>
                 <Grid CornerRadius="10" Grid.Column="2" Background="White">
 
